# Rapid

./: CMakeLists.txt  README.md
rapid/: CMakeLists.txt
rapid/include/: internal.h  io-Mini-Beast.h  io.h  network.h  rapid.h  rapid_math.h  setup.h  units.h
rapid/include/IO/: base64-Mini-Beast.h  base64.h  createDir.h  csvReader.h  messageBox.h
rapid/include/array/: arrayCore.h  cblasAPI.h  cudaAPI.cuh  fromData.h  prettyPrint.h
rapid/include/matrix/: matrixArrayView.h  matrixCore.h  tinyMatrix.h
rapid/include/network/: activations.h  netVis.h  networkCore.h  optimizers.h
rapid/include/network/layers/: affine.h  layerBase.h
rapid/include/parser/: mathParserCore.h  utils.h
rapid/include/units/: basicUnit.h  distance.h
tests/: CMakeLists.txt  main.cpp
tests/CUDA/: CMakeLists.txt  cudaTest.cpp
tests/Less simple XOR/: CMakeLists.txt  xorNetwork.cpp
tests/MahiGui/: CMakeLists.txt  mahiTest.cpp
tests/Neural Network with Graphics/: CMakeLists.txt  graphicalNetwork-Mini-Beast.cpp  graphicalNetwork.cpp
tests/NeuralNetwork/: CMakeLists.txt  networkTest.cpp
tests/NeuralNetwork2/: CMakeLists.txt  networkTest2.cpp
tests/Simple XOR/: CMakeLists.txt  simpleNetwork.cpp
